--- a/src/main/bin/GbaSiteTools.ini
+++ b/src/main/bin/GbaSiteTools.ini
@@ -1,5 +1,5 @@
 working.directory=..
-main.class=ca.bc.gov.gba.ui.app.GbaToolsMain
+main.class=ca.bc.gov.gbasites.app.GbaSiteToolsMain
 classpath.1=lib/*.jar
 log.level=error
 vm.version.min=11
