--- a/src/main/ini/GbaSiteTools.ini
+++ b/src/main/ini/GbaSiteTools.ini
@@ -1,9 +1,9 @@
-working.directory=..
-main.class=ca.bc.gov.gba.ui.app.BcGis
+working.directory=versions/gba-sites-${project.version}-bin
+main.class=ca.bc.gov.gbasites.app.GbaSiteToolsMain
 classpath.1=lib/*.jar
 log.level=error
 vm.version.min=11
-vm.heapsize.preferred=1280
+vm.heapsize.preferred=1024
 vm.location=../../apps64/jdk-11/bin/server/jvm.dll
 java.library.path.1=.\lib
 java.library.path.1=..\..\apps64\MSVC
