--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
   <developers>
     <developer>
       <name>Paul Austin</name>
-      <email>pauldaustin@users.noreply.github.com</email>
+      <email>445537+pauldaustin@users.noreply.github.com</email>
       <organization>Revolution Systems Inc.</organization>
       <organizationUrl>http://www.revolsys.com/</organizationUrl>
       <roles>
